# ant

./: .codecov.yml  .gitignore  .travis.aftersuccess.sh  .travis.build.sh  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  _a2_geo_acceptance_8cc.html  _a2_geo_acceptance_8h.html  _acqu_scaler_processor_8cc.html  _acqu_scaler_processor_8h.html  _ant-_e_corr_8cc.html  _ant-_e_corr_8cc.js  _ant-add_t_i_d_8cc.html  _ant-add_t_i_d_8cc.js  _ant-alt_veto_cal_tool_8cc.html  _ant-alt_veto_cal_tool_8cc.js  _ant-calib-dump_8cc.html  _ant-calib-dump_8cc.js  _ant-calib-editor_8cc.html  _ant-calib-editor_8cc.js  _ant-calib-readin_8cc.html  _ant-calib-readin_8cc.js  _ant-calib-regedit_8cc.html  _ant-calib-regedit_8cc.js  _ant-calib-smooth_8cc.html  _ant-calib-smooth_8cc.js  _ant-calib-viewer_8cc.html  _ant-calib-viewer_8cc.js  _ant-calib_8cc.html  _ant-calib_8cc.js  _ant-chain_8cc.html  _ant-chain_8cc.js  _ant-cocktail_8cc.html  _ant-cocktail_8cc.js  _ant-compare_hists_8cc.html  _ant-compare_hists_8cc.js  _ant-completion_8cc.html  _ant-completion_8cc.js  (+4805 more)
progs/: Ant-ECorr.cc  Ant-addTID.cc  Ant-altVetoCalTool.cc  Ant-calib-dump.cc  Ant-calib-editor.cc  Ant-calib-readin.cc  Ant-calib-regedit.cc  Ant-calib-smooth.cc  Ant-calib-viewer.cc  Ant-calib.cc  Ant-chain.cc  Ant-cocktail.cc  Ant-compareHists.cc  Ant-completion.cc  Ant-copyTree.cc  Ant-fakeRaw.cc  Ant-hadd.cc  Ant-info.cc  Ant-makeLinPol.cc  Ant-makeSigmas.cc  Ant-makeTaggEff.cc  Ant-mc-corrections.cc  Ant-mc-omegagun.cc  Ant-mc-pi0gun.cc  Ant-mc-prefilter.cc  Ant-mcdatabase-viewer.cc  Ant-mcgun.cc  Ant-mcsmearing.cc  Ant-plot.cc  Ant-pluto.cc  Ant-rawdump.cc  Ant-repair-keys.cc  Ant-smoothTaggEff.cc  Ant-treeTool.cc  Ant-tuning-viewer.cc  Ant.cc  CMakeLists.txt  EtaDalitz_plot.cc  EtapDalitz_fit.cc  EtapDalitz_plot.cc  (+54 more)
progs/detail/: Corrections.cc  Corrections.h  McAction.h  SigmaPlus_tools.cc  SigmaPlus_tools.h  TPCSim_tools.cc  TPCSim_tools.h  dilepton_radiative_corrections.h  dimuon_radiative_corrections.h  radiative_corrections_parse_table.py  taggEffClasses.cc  taggEffClasses.h  tools.h
src/: A2GeoAcceptance.cc  A2GeoAcceptance.h  AntPhysics.cc  AntPhysics.h  CMakeLists.txt  DataReader.h  Detector.cc  Event.cc  Event.h  EventManager.cc  EventManager.h  Particle.cc  Particle.h  ParticleType.cc  ParticleType.h  Physics.cc  Physics.h  TaggerHit.h
src/analysis/: A2GeoAcceptance.cc  A2GeoAcceptance.h  CMakeLists.txt  DataOverview.cc  DataOverview.h  DeltaPlusPhysics.cc  DeltaPlusPhysics.h  Detector.cc  Detector.h  GeoAcceptance.cc  GeoAcceptance.h  MCOverview.cc  MCOverview.h  MCSingleParticles.h  OutputManager.cc  OutputManager.h  ParticleID.cc  ParticleID.h  ParticleType.cc  ParticleType.h  RecoCheck.cc  SplitCheck.h  TestAPLCON.cc  TestAPLCON.h  TestPhysics.cc  TestPhysics.h  mctrue_acceptance.cc  mctrue_acceptance.h  omega.cc  omega.h  omega_bottomup.cc  omega_bottomup.h
src/base/: Array2D.cc  Array2D.h  BinSettings.cc  BinSettings.h  CMakeLists.txt  ClippedInterpolatorWrapper.cc  ClippedInterpolatorWrapper.h  CmdLine.h  Detector_t.cc  Detector_t.h  FloodFillAverages.h  ForLoopCounter.h  Format.h  GitInfo.cc  GitInfo.h  Interpolator.cc  Interpolator.h  Logger.cc  Logger.h  LorentzVec.cc  LorentzVec.h  OptionsList.cc  OptionsList.h  ParticleType.cc  ParticleType.h  ParticleTypeTree.cc  ParticleTypeTree.h  Paths.h.in  PhysicsMath.h  PlotExt.cc  PlotExt.h  ProgressCounter.cc  ProgressCounter.h  ReadTFiles.cc  ReadTFiles.h  SavitzkyGolay.cc  SavitzkyGolay.h  TF1Ext.h  TFileWrapper.cc  TFileWrapper.h  (+32 more)
src/calibration/: ACECanvas.cc  ACECanvas.h  BaseCalModule.h  CMakeLists.txt  Calibration.h  CalibrationApply.h  CalibrationDataManager.cc  CalibrationDataManager.h  CalibrationEditor.cc  CalibrationEditor.h  CalibrationManager.h  DataBase.cc  DataBase.h  DataManager.cc  DataManager.h  Editor.cc  Editor.h  ListBox.h  TestCalCB.cc  TestCalCB.h
src/data/: Event.cc  Particle.cc  TaggerHit.cc  Track.cc  TriggerInfo.h
src/expconfig/: CMakeLists.txt  Detector_t.cc  Detector_t.h  ExpConfig.cc  ExpConfig.h  Setup.cc  Setup.h  SetupRegistry.cc
src/input/: DetectorHitInput.cc  DetectorHitInput.h  FileManager.cc  FileManager.h  GeantInput.h  GoatReader.cc  GoatReader.h  ParticleInput.h  PlutoInput.cc  PlutoInput.h  TreeManager.cc  TreeManager.h  TriggerInput.h
src/plot/: HistogramFactories.h  root_draw.h
src/progs/: ant_test.cc  ant_testphysics.cc  ant_with_aplcon.cc  ant_with_goat.cc  data_overview.cc  geoacceptance.cc  histo-dev.cc  omega_analysis.cc  test_FileManager.cc  test_InputModule.cc  test_goatreader.cc  test_physicsmanager.cc
src/reconstruct/: ApplyCalibrations.h  CMakeLists.txt  CandidateBuilder.cc  CandidateBuilder.h  Clustering.cc  Clustering.h  HitMatching.h  Reconstruct.cc  Reconstruct.h  Reconstruct_traits.h  TrackBuilder.cc  TrackBuilder.h  UpdateableManager.cc  UpdateableManager.h
src/rint/: CMakeLists.txt  LinkDef.h  TCalibrationEditor.cc  TCalibrationEditor.h
src/root-addons/: CMakeLists.txt
src/smarttree/: CMakeLists.txt  LinkDef.h  smarttree.cc  smarttree.h
src/tree/: CMakeLists.txt  LinkDef.h  MemoryPool.cc  MemoryPool.h  TAntHeader.cc  TAntHeader.h  TCalibrationData.h  TCandidate.h  TCluster.h  TDataRecord.h  TDetectorRead.h  TDetectorReadHit.h  TEvent.cc  TEvent.h  TEventData.cc  TEventData.h  THeaderInfo.h  TID.h  TParticle.cc  TParticle.h  TSimpleParticle.cc  TSimpleParticle.h  TSlowControl.h  TTagger.h  TTaggerHit.h  TTarget.h  TTrack.h  TTrigger.h  TUnpackerMessage.h  (+5 more)
test/: CMakeLists.txt  catch.cc  catch_config.h.in  expconfig_helpers.cc  expconfig_helpers.h  stealer.h  test_python_helper.sh
unpacker/: BeamtimeConfig.cc  BeamtimeConfig.h  CMakeLists.txt  ExpConfig.cc  ExpConfig.h  Logger.cc  Logger.h  RawFileReader.cc  RawFileReader.h  TDataRecord.cc  TDataRecord.h  TDetectorRead.cc  TDetectorRead.h  THeaderInfo.cc  THeaderInfo.h  TSlowControl.cc  TUnpackerMessage.cc  TUnpackerMessage.h  Unpacker.cc  Unpacker.h  UnpackerAcqu.cc  UnpackerAcqu.h  UnpackerAcquMk2.cc  UnpackerAcquMk2.h  UnpackerAcqu_detail.cc  UnpackerAcqu_detail.h  UnpackerAcqu_legacy.h  main.cpp  stl_helpers.h
(+1525 files in other folders)
