include_directories(
  .
)

set(ANALYSIS_INPUT
  input/event_t.cc
  input/DataReader.h
  input/goat/detail/InputModule.cc
  input/goat/detail//TreeManager.cc
  input/goat/detail/TrackInput.cc
  input/goat/detail/TriggerInput.cc
  input/goat/detail/DetectorHitInput.cc
  input/goat/detail/TaggerInput.cc
  input/goat/detail/EventParameters.cc
  input/goat/GoatReader.cc
  input/ant/AntReader.cc
  input/pluto/PlutoReader.cc
  input/pluto/detail/PlutoWrapper.cc
)

set(ANALYSIS_PHYSICS
  physics/Physics.cc
  physics/PhysicsManager.cc
  physics/manager_t.h
  physics/test/TestParticleCombinatorics.cc
  physics/pi0/DeltaPlusPhysics.cc
  physics/pi0/DeltaTreeGenerator.cc
  physics/omega/omega.cc
  physics/omega/GeoAcceptance.cc
  physics/omega/pi0eta.cc
  physics/omega/pi0eta_lost_g.cc
  physics/omega/OmegaMCAngles.cc
  physics/omega/Omega_EpEm.cc
  physics/test/TestAPLCON.cc
  physics/common/DataOverview.cc
  physics/omega/mctrue_acceptance.cc
  physics/common/CandidatesAnalysis.cc
  physics/common/ParticleIDCheck.cc
  physics/common/ProtonCheck.cc
  physics/common/DebugPhysics.cc
  physics/common/ProcessTaggEff.cc
  physics/common/MCReconstructCheck.cc
  physics/common/MCSmearing.cc
  physics/tpc/PhysicsStats.cc
  physics/etaprime/etaprime_omega_gamma.cc
  physics/etaprime/etaprime-3pi0.cc
  physics/etaprime/mctrue_3pi0.cc
  physics/common/IMPlots.cc
  physics/common/ProtonTagger.cc
  physics/common/ExtractTimings.cc
  physics/common/ExtractScalers.cc
  physics/misc/XMasCB.cc
  physics/misc/debugScalers.cc
  physics/misc/debugTaggEff.cc
  physics/common/ExtractResolutions.cc
  physics/pi0/JustPi0.cc
  physics/etaprime/etaprime_proton.cc
  physics/common/EventDisplayHists.cc
  physics/common/EventFilter.cc
  physics/omega/FindProton.cc
  physics/misc/GoatComparison.cc
  physics/pi0/RarePion.cc
  physics/tunings/InterpolatedPulls.cc
  physics/common/ReconstructCheck.cc
  physics/common/ExtractShowerDepth.cc
  physics/common/MCChannels.cc
  physics/common/IMCombFitPlots.cc
  physics/etaprime/etaprime_dalitz.cc
  physics/production/triplePi0.cc
  physics/production/singlePi0.cc
  physics/tunings/TwoPi0_MCSmearing.cc
  physics/common/JustParticles.cc
  physics/common/MesonDalitzDecays.cc
  physics/misc/Tutorial.cc
  physics/test/TestMCWeighting.cc
  physics/tunings/MCClusterECorr.cc
  physics/pi0/ProtonPi0.cc
  physics/test/TestSigmaPlusFitter.cc
  )

set(ANALYSIS_PHYSICS_CALIBRATION
  physics/calibration/Time.cc
  physics/calibration/CB_Energy.cc
  physics/calibration/CB_TimeWalk.cc
  physics/calibration/CB_SourceCalib.cc
  physics/calibration/TAPS_Energy.cc
  physics/calibration/TAPS_ShortEnergy.cc
  physics/calibration/PID_Energy.cc
  physics/calibration/PID_PhiAngle.cc
  physics/calibration/TAPSVeto_Energy.cc
  physics/calibration/Thresholds.cc
  physics/calibration/PID_TAPSVeto_Kinfit.cc
)

set(ANALYSIS_PLOT
  plot/root_draw.cc
  plot/HistogramFactories.cc
  plot/PromptRandomHist.cc
  plot/CutTree.h
  plot/HistStyle.cc
)

set(ANALYSIS_UTILS
  utils/combinatorics.h
  utils/matcher.h
  utils/A2GeoAcceptance.cc
  utils/ParticleID.cc
  utils/root-addons.cc
  utils/particle_tools.cc
  utils/TimeSmearingHack.cc
  utils/fitter/Fitter.cc
  utils/fitter/KinFitter.cc
  utils/fitter/TreeFitter.cc
  utils/Uncertainties.cc
  utils/ProtonPermutation.cc
  utils/ClusterTools.cc
  utils/MCSmear.cc
  utils/MCFakeReconstructed.cc
  utils/PullsWriter.cc
  utils/uncertainties/Constant.cc
  utils/uncertainties/MCExtracted.cc
  utils/uncertainties/Optimized.cc
  utils/uncertainties/Interpolated.cc
  utils/uncertainties/FitterSergey.cc
  utils/uncertainties/MeasuredProton.cc
  utils/uncertainties/MCSmearingAdlarson.cc
  utils/MCWeighting.cc
  utils/fitter/SigmaPlusFitter.cc
  )

set(ANALYSIS_ALL
    ${ANALYSIS_INPUT}
    ${ANALYSIS_PHYSICS}
    ${ANALYSIS_PHYSICS_CALIBRATION}
    ${ANALYSIS_PLOT}
    ${ANALYSIS_UTILS}
)

add_subdirectory(slowcontrol)

append_header_files(ANALYSIS_ALL)

add_library(analysis ${ANALYSIS_ALL})
target_link_libraries(analysis
  ${ROOT_LIBRARIES}
  HistPainter
  ${PLUTO_LIBRARY}
  ${APLCON_LIBRARY}
  base
  tree
  expconfig
  cbtaps_display
  analysis_codes
  slowcontrol
  )
